# asek

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: globals.hpp  index.hpp  search.hpp  utils.hpp
schemas/: tfIdfIndex.fbs
src/: index.cpp  main.cpp  search.cpp  utils.cpp
